--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 boto3
+flask_bcrypt==0.7.1
 alembic==1.4.0
 aniso8601==8.0.0
 attrs==19.3.0
@@ -26,7 +27,7 @@ python-dotenv==0.11.0
 python-editor==1.0.4
 python-json-logger==0.1.11
 pytz==2019.3
-PyYAML==5.3
+# PyYAML==5.3
 six==1.14.0
 slugify==0.0.1
 SQLAlchemy==1.3.13
