--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ flask-marshmallow==0.11.0
 Flask-Migrate==2.5.2
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.1
+# Flask-SQLAlchemy==2.1
+
 importlib-metadata==1.5.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -29,7 +31,8 @@ Mako==1.1.1
 MarkupSafe==1.1.1
 marshmallow==3.5.0
 marshmallow-sqlalchemy==0.22.2
-psycopg2==2.8.4
+# psycopg2==2.8.4
+psycopg2==2.7.5
 pycparser==2.19
 PyJWT==1.7.1
 pyrsistent==0.15.7
