--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pyfcm
 alembic==1.4.0
 amadeus==3.5.0
 aniso8601==8.0.0
@@ -10,6 +9,7 @@ boto3==1.12.7
 botocore==1.15.7
 certifi==2019.11.28
 cffi==1.14.0
+chardet==3.0.4
 Click==7.0
 devconfig==0.4.8
 distlib==0.3.0
@@ -24,6 +24,7 @@ flask-marshmallow==0.11.0
 Flask-Migrate==2.5.2
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.1
+idna==2.9
 importlib-metadata==1.5.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -33,8 +34,9 @@ Mako==1.1.1
 MarkupSafe==1.1.1
 marshmallow==3.5.0
 marshmallow-sqlalchemy==0.22.2
-psycopg2==2.8.4
+psycopg2-binary==2.8.5
 pycparser==2.19
+pyfcm==1.4.7
 PyJWT==1.7.1
 pyrsistent==0.15.7
 python-dateutil==2.8.1
@@ -43,6 +45,7 @@ python-editor==1.0.4
 python-json-logger==0.1.11
 pytz==2019.3
 PyYAML==5.3
+requests==2.23.0
 s3transfer==0.3.3
 six==1.14.0
 slugify==0.0.1
