--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==19.3.0
 bcrypt==3.1.7
 blinker==1.4
 boto3==1.12.7
+boto3-stubs==1.12.43.0
 botocore==1.15.7
 certifi==2019.11.28
 cffi==1.14.0
@@ -23,6 +24,7 @@ Flask-Mail==0.9.1
 flask-marshmallow==0.11.0
 Flask-Migrate==2.5.2
 flask-restplus==0.13.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 idna==2.9
 importlib-metadata==1.5.0
