--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ blinker==1.4
 boto3==1.12.7
 boto3-stubs==1.12.43.0
 botocore==1.15.7
+cached-property==1.5.1
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
 Click==7.0
+defusedxml==0.6.0
 devconfig==0.4.8
 distlib==0.3.0
 docutils==0.16
@@ -28,14 +30,17 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 idna==2.9
 importlib-metadata==1.5.0
+isodate==0.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
 jmespath==0.9.5
 jsonschema==3.2.0
+lxml==4.2.5
 Mako==1.1.1
 MarkupSafe==1.1.1
 marshmallow==3.5.0
 marshmallow-sqlalchemy==0.22.2
+pkgconfig==1.5.1
 psycopg2-binary==2.8.5
 pycparser==2.19
 pyfcm==1.4.7
@@ -48,6 +53,7 @@ python-json-logger==0.1.11
 pytz==2019.3
 PyYAML==5.3
 requests==2.23.0
+requests-toolbelt==0.9.1
 s3transfer==0.3.3
 six==1.14.0
 slugify==0.0.1
@@ -56,4 +62,5 @@ sqlalchemy-filters==0.10.0
 urllib3==1.25.8
 virtualenv==20.0.5
 Werkzeug==0.16.1
+zeep==3.4.0
 zipp==3.0.0
